added swag files
